Install puavo-pkgs-ui.  But do not (yet) provide any .desktop files, hook it to the menu or such...

--- a/parts/pkg/Makefile
+++ b/parts/pkg/Makefile
@@ -34,6 +34,7 @@ install: installdirs
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) \
 		puavo-pkg \
+		puavo-pkgs-ui \
 		puavo-pkg-update \
 		puavo-pkg-update-from-gui \
 		puavo-pkg-update-repository \
